fixed contrast ratio on purple text to be within WCAG standards for AA

--- a/src/main.css
+++ b/src/main.css
@@ -134,7 +134,7 @@ h3 {
 h4 {
   margin: 10px 0vw 5px 0vw;
   font-size: 1.3em;
-  color: rgb(143, 0, 209);
+  color: rgb(160, 0, 235);
 }
 
 h5 {
